--- a/assets/stylesheets/styleguide/_colours.scss
+++ b/assets/stylesheets/styleguide/_colours.scss
@@ -2,6 +2,9 @@
 $main-colour: $mellow-red;
 $secondary-colour: $red;
 
+$gsdm-nav-main: $mellow-red;
+$gsdm-nav-secondary: $black;
+
 $alpha-colour: $pink;
 $discovery-colour: $pink-25;
 $inception-colour: $pink-50;
