--- a/assets/stylesheets/views/_emphasised-form-controls.scss
+++ b/assets/stylesheets/views/_emphasised-form-controls.scss
@@ -2,12 +2,11 @@
 // DESIGN PATTERN PAGE: EMPHASISED FORM CONTROLS
 //
 
-// Emphasised form controls
-@include emphasised-form-controls;
+.emphasised-form-controls {
+  // Emphasised form controls
+  @include emphasised-form-controls;
 
-.form-example-1 {
-  @include form(top, 5.5em);
+  .form-example-1 {
+    @include form(top, 5.5em);
+  }
 }
-
-
-
