--- a/assets/stylesheets/views/_hidden-form-controls.scss
+++ b/assets/stylesheets/views/_hidden-form-controls.scss
@@ -2,12 +2,11 @@
 // DESIGN PATTERN PAGE: HIDDEN FORM CONTROLS
 //
 
-// Hidden form controls
-@include hidden-form-controls;
+.hidden-form-controls {
+  // Hidden form controls
+  @include hidden-form-controls;
 
-.form-example-1 {
-  @include form(left, 5.5em);
+  .form-example-1 {
+    @include form(left, 5.5em);
+  }
 }
-
-
-
