--- a/assets/stylesheets/views/_wide.scss
+++ b/assets/stylesheets/views/_wide.scss
@@ -1,14 +1,21 @@
-.wide {
-  .article-container {
-    margin: 0 2em;
+body.full-width {
+  .wide {
+    .article-container {
+      margin: 0 2em;
 
-    h2 {
-      border-bottom: 3px solid $main-colour;
-      margin-bottom: 1em;
-    }
+      h2 {
+        border-bottom: 3px solid $main-colour;
+        margin-bottom: 1em;
+      }
 
-    p {
-      width: 75%;
+      p {
+        width: 75%;
+      }
+
+      &>.inner {
+        margin: 0;
+        padding: 0;
+      }
     }
   }
 }
