--- a/assets/stylesheets/views/_buttons.scss
+++ b/assets/stylesheets/views/_buttons.scss
@@ -2,20 +2,20 @@
 // DESIGN PATTERN PAGE: BUTTONS
 //
 
-// Buttons
-.btn{
- // @include button($green);
+.buttons {
+  // Buttons
+  
+  .btn{
+   // @include button($green);
+  }
+  .btn-secondary{
+    //@include button($grey-3);
+  }
+
+  .btn-warning{
+   // @include button($red);
+  }
+
+  .small{ @include core-16; }
+  .x-small{ @include core-14; }
 }
-.btn-secondary{
-  //@include button($grey-3);
-}
-
-.btn-warning{
- // @include button($red);
-}
-
-.small{ @include core-16; }
-.x-small{ @include core-14; }
-
-
-
