--- a/assets/stylesheets/views/_forms.scss
+++ b/assets/stylesheets/views/_forms.scss
@@ -2,14 +2,13 @@
 // DESIGN PATTERN PAGE: FORMS
 //
 
-/* Forms */
-.form-example-1 {
-  @include form(top, 5.5em);
+.forms {
+  /* Forms */
+  .form-example-1 {
+    @include form(top, 5.5em);
+  }
+
+  #form-example-2.top { @include form(top, 7.5em) }
+  #form-example-2.left { @include form(left, 7.5em) }
+  #form-example-2.right { @include form(right, 7.5em) }
 }
-
-#form-example-2.top { @include form(top, 7.5em) }
-#form-example-2.left { @include form(left, 7.5em) }
-#form-example-2.right { @include form(right, 7.5em) }
-
-
-
