--- a/assets/stylesheets/views/_show-hide.scss
+++ b/assets/stylesheets/views/_show-hide.scss
@@ -2,14 +2,12 @@
 // DESIGN PATTERN PAGE: SHOW / HIDE
 //
 
-// Show/hide
-@include details-and-summary;
+.show-hide {
+  // Show/hide
+  @include details-and-summary;
 
-// Highlighted show/hide
-.show-hide-version-2{
-  @include details-and-summary(highlighted);
+  // Highlighted show/hide
+  .show-hide-version-2{
+    @include details-and-summary(highlighted);
+  }
 }
-
-
-
-
