Add page status to templates

--- a/assets/stylesheets/helpers/_page-status.scss
+++ b/assets/stylesheets/helpers/_page-status.scss
@@ -2,7 +2,7 @@
 .page-status {
   position: absolute;
   right: 0;
-  margin-right: 0;
+  margin-right: 2em;
   // padding: 0.2em 1.5em 0em 1.5em;
   padding: 11px 15px 10px;
 
