--- a/_layouts/design-patterns.html
+++ b/_layouts/design-patterns.html
@@ -2,6 +2,11 @@
 layout: default-wrapper
 section_class: wide design-patterns
 ---
+
+{% if page.status %}
+<div class="page-status {{ page.status }}">{{ page.status }}</div>
+{% endif %}
+
 <article role="article" class="group">
   <header class="page-header group">
     <hgroup>
