Use TOC Filter plugin to show TOC on guidance pages

--- a/_layouts/detailed-guidance.html
+++ b/_layouts/detailed-guidance.html
@@ -18,6 +18,10 @@ section_class: detailed-guidance
   </header>
 
   <div class="article-container group">
+    <div class="toc">
+      {{ page.content | toc_list }}
+    </div>
+
     <div class="inner">
       {{ content }}
     </div>
