Add styles for guidance TOCs

--- a/_layouts/detailed-guidance.html
+++ b/_layouts/detailed-guidance.html
@@ -18,7 +18,7 @@ section_class: detailed-guidance
   </header>
 
   <div class="article-container group">
-    <div class="toc">
+    <div class="contents">
       {{ page.content | toc_list }}
     </div>
 
