Make forms design pattern page use forms styles again

--- a/assets/stylesheets/design-patterns/_forms.scss
+++ b/assets/stylesheets/design-patterns/_forms.scss
@@ -268,7 +268,7 @@
           .inline {
             .group,
             &.option label{
-              //margin-top: -1.5em;
+              width: auto;
             }        
             .group{
               margin-bottom: 0.5em;
