Update and apply colour palettes page CSS

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -44,7 +44,7 @@
 @import "views/_default.scss";
 
 @import "views/_category-index.scss";
-@import "views/_colours.scss";
+@import "views/_colour-palettes.scss";
 @import "views/_design-patterns.scss";
 @import "views/_detailed-guidance.scss";
 @import "views/_home-page.scss";
@@ -56,7 +56,6 @@
 
 @import "views/_accordion-form.scss";
 @import "views/_buttons.scss";
-@import "views/_colours.scss";
 @import "views/_emphasised-form-controls.scss";
 @import "views/_forms.scss";
 @import "views/_hidden-form-controls.scss";
