--- a/assets/stylesheets/helpers/_contents.scss
+++ b/assets/stylesheets/helpers/_contents.scss
@@ -1,14 +1,82 @@
 .contents {
-  ul {
-    list-style: none;
+  width: 25%;
+  float: left;
+
+  .inner {
+    padding: 0 2em;
+    margin: 0;
+  }
+
+  h2 {
+    @include bold-19;
+    margin-top: 0;
+  }
+
+  nav {
+    margin: 0 2em;
+  }
+
+  ol {
+    // border-top: 1px solid $border-colour;
     padding: 0;
-    margin: 0 0 2em 0;
+    margin: 0;
+    list-style: none;
 
     li {
-      padding: 0;
-      margin: 0;
-
       @include core-16;
+      margin-left: 0;
+      padding-left: 0;
+
+      a {
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      li {
+        list-style: none;
+
+        a {
+          padding-left: $gutter-half;
+
+          &:before {
+            content: "-";
+            position: relative;
+            float: left;
+            width: $gutter-half;
+            margin-left: $gutter-half*-1;
+          }
+        }
+      }
     }
+
+    .more-like-this {
+      display: block;
+      margin-top: $gutter;
+      background: $main-colour;
+      padding: $gutter-one-sixth;
+      margin-left: 0;
+
+      a {
+        border-bottom: 0;
+        padding: $gutter-one-sixth $gutter-one-sixth+32px $gutter-one-sixth $gutter-one-sixth;
+        color: $white;
+        background: transparent ("../images/down-arrow-small.png") no-repeat 100% 100%;
+      }
+    }
+    a {
+      display: block;
+      padding: $gutter-one-sixth 0;
+      border-bottom: 1px solid $border-colour;
+    }
+  }
+}
+
+.back-to-content {
+  position: fixed;
+  top: $gutter-half;
+  a {
+    display: block;
   }
 }
