--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -35,6 +35,7 @@
 @import "helpers/_github-links.scss";
 @import "helpers/_global-nav.scss";
 @import "helpers/_page-header.scss";
+@import "helpers/_page-header-meta.scss";
 @import "helpers/_page-status.scss";
 @import "helpers/_role-links.scss";
 @import "helpers/_tables.scss";
