--- a/_layouts/cards.html
+++ b/_layouts/cards.html
@@ -55,7 +55,7 @@ a:after{display: none;}
 <div class="card">
     <h3>{{ p.title }}</h3>
     <p>{{ p.subtitle }}</p>
-    <p><a href="{{ p.url }}">{{ p.url }}</a></p>
+    <p><a href="{{ p.url | replace:'.html','' }}">{{ p.url | replace:'.html','' }}</a></p>
     <hr>
     <p class="audience">Primary audience: {{ p.audience.primary }}</p>
     <p class="audience">Secondary audience: {{ p.audience.secondary }}</p>
