Change the case

--- a/_includes/_caveat-notice.html
+++ b/_includes/_caveat-notice.html
@@ -1,5 +1,5 @@
 <div id="caveat-notice">
-  <p>Welcome to the Government Service Design Manual. From April this will be the place to find the Digital by Default service standard, as well as guidance and tools for building world-class digital services.</p>
+  <p>Welcome to the Government Service Design Manual. From April this will be the place to find the digital by default service standard, as well as guidance and tools for building world-class digital services.</p>
 
   <p>This is an experimental beta version of the manual, and it may contain inaccuracies or have gaps.</p>
 
