--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -20,7 +20,7 @@
             <nav role="navigation" class="content">
               <ul id="navigation">
                 <li><a href="/" {% if page.section == 'guidance' %}class="current"{% endif %}>Government Service Design Manual</a></li>
-                <li><a href="/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default standard</a></li>
+                <li><a href="/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by default standard</a></li>
               </ul>
             </nav>
           </div>
