--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -26,6 +26,7 @@
 @import "design-patterns/_panels.scss";
 @import "design-patterns/_progress-indicator.scss";
 @import "design-patterns/_regular-grid.scss";
+@import "design-patterns/_grid.scss";
 @import "design-patterns/_show-hide.scss";
 
 // Helpers
