--- a/assets/stylesheets/design-patterns/_regular-grid.scss
+++ b/assets/stylesheets/design-patterns/_regular-grid.scss
@@ -15,6 +15,7 @@
     padding: 0;
     list-style-type: none;
     list-style-image: none;
+    box-sizing: border-box;
     float: left;
     $margins: $columns - 1;
     $item-share: 1 - (0.025 * ($columns - 1));
