Serve site from /service-manual
Add base href to head
Make asset URLs relative

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,6 +1,8 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>{{ page.title }} - Government Service Design Manual</title>
 
+<base href="http://localhost:4000/service-manual/">
+
 {% include _head.local.html %}
 
 {% if page.css  %}
