--- a/_includes/_head.local.html
+++ b/_includes/_head.local.html
@@ -1,22 +1,22 @@
 <!-- Stylesheets from static -->
 
 <!--[if gt IE 8]><!-->
-  <link href="/assets/local/application.css" media="screen" rel="stylesheet" type="text/css">
-  <link href="/assets/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="assets/local/application.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="assets/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css">
 <!--<![endif]-->
 <!--[if IE 6]>
-  <link href="/assets/local/application-ie6.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/assets/stylesheets/main-ie6.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="assets/local/application-ie6.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="assets/stylesheets/main-ie6.css" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
 <!--[if IE 7]>
-  <link href="/assets/local/application-ie7.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/assets/stylesheets/main-ie7.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="assets/local/application-ie7.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="assets/stylesheets/main-ie7.css" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
 <!--[if IE 8]>
-  <link href="/assets/local/application-ie8.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/assets/stylesheets/main-ie8.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="assets/local/application-ie8.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="assets/stylesheets/main-ie8.css" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
-<link href="/assets/local/print.css" media="print" rel="stylesheet" type="text/css">
+<link href="assets/local/print.css" media="print" rel="stylesheet" type="text/css">
 
 <!--[if IE 8]>
 <script type="text/javascript">
@@ -31,19 +31,19 @@
 </script>
 <![endif]-->
 
-<!--[if gte IE 9]><!--><link href="/assets/local/fonts.css" media="all" rel="stylesheet" type="text/css"><!--<![endif]-->
+<!--[if gte IE 9]><!--><link href="assets/local/fonts.css" media="all" rel="stylesheet" type="text/css"><!--<![endif]-->
 
 <script src="/assets/local/jquery-1.7.2.js" type="text/javascript"></script>
 <!--[if lt IE 9]><script src="/assets/local/ie.js" type="text/javascript"></script><![endif]-->
 
-<link rel="shortcut icon" href="/assets/local/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="assets/local/favicon.ico" type="image/x-icon">
 <!-- For third-generation iPad with high-resolution Retina display: -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/local/apple-touch-icon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/local/apple-touch-icon.png">
 <!-- For iPhone with high-resolution Retina display: -->
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/local/apple-touch-icon.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/local/apple-touch-icon.png">
 <!-- For first- and second-generation iPad: -->
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/local/apple-touch-icon-72x72.png">
-<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --><link rel="apple-touch-icon-precomposed" href="/assets/local/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/local/apple-touch-icon-72x72.png">
+<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --><link rel="apple-touch-icon-precomposed" href="assets/local/apple-touch-icon-57x57.png">
 
-<script src="/assets/local/frontend.js" type="text/javascript"></script>
-<script src="/assets/javascript/caveat-notice.js" type="text/javascript"></script>
+<script src="assets/local/frontend.js" type="text/javascript"></script>
+<script src="assets/javascript/caveat-notice.js" type="text/javascript"></script>
