Switch to 'grid' rather than 'regular-grid'

--- a/_includes/stylesheets/_design_patterns.scss
+++ b/_includes/stylesheets/_design_patterns.scss
@@ -13,7 +13,7 @@
 
 @import "design-patterns/progress-indicator.scss";
 @import "design-patterns/show-hide.scss";
-@import "design-patterns/regular-grid.scss";
+@import "design-patterns/grid.scss";
 @import "design-patterns/utils.scss";
 @import "design-patterns/forms.scss";
 @import "design-patterns/buttons";
