--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -13,7 +13,6 @@
 @import "styleguide/_colours.scss";
 @import "styleguide/_dimensions.scss";
 
-@import "design-patterns/_regular-grid.scss";
 @import "design-patterns/_utils.scss";
 @import "design-patterns/_panels.scss";
 @import "design-patterns/_accordion-form.scss";
@@ -25,7 +24,6 @@
 @import "design-patterns/_help-popup.scss";
 @import "design-patterns/_panels.scss";
 @import "design-patterns/_progress-indicator.scss";
-@import "design-patterns/_regular-grid.scss";
 @import "design-patterns/_grid.scss";
 @import "design-patterns/_show-hide.scss";
 
@@ -64,7 +62,7 @@
 @import "views/_icons.scss";
 @import "views/_panels.scss";
 @import "views/_progress-indicator.scss";
-@import "views/_regular-grid.scss";
+@import "views/_grid.scss";
 @import "views/_show-hide.scss";
 
 
