--- a/assets/stylesheets/views/_role-index.scss
+++ b/assets/stylesheets/views/_role-index.scss
@@ -15,7 +15,7 @@
 
   // Primary links
   .primary-links {
-    @include regular-grid(3);
+    @include grid(3);
     margin-bottom: 2em;
 
     div{
