Update file names

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -9,7 +9,7 @@
 @import "../toolkit/stylesheets/_conditionals";
 @import "../toolkit/stylesheets/_shims";
 
-// Styleguide
+// style-guide
 @import "styleguide/_colours.scss";
 @import "styleguide/_dimensions.scss";
 
