--- a/service-manual/assets/stylesheets/design-patterns/_grid.scss
+++ b/service-manual/assets/stylesheets/design-patterns/_grid.scss
@@ -19,7 +19,7 @@
     list-style-image: none;
     @include box-sizing(border-box);
     float: left;
-    border-right: solid 1em transparent;
+    border-right: solid 1em $white;
     margin-bottom: 1em;
     *:first-child{
       margin-top: 0;
