Make role index links work

--- a/_layouts/role-index.html
+++ b/_layouts/role-index.html
@@ -97,5 +97,5 @@ section_class: wide role-index
     {% include _role-links.html %}
   </div>
 
-  <div class="all-guides"><strong><a href="/all-guides">See all guides…</a></strong></div>
+  <div class="all-guides"><strong><a href="/browse">Browse all guides…</a></strong></div>
 </div>
