--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -1,10 +1,10 @@
 <h3>Guides and resources for…</h3>
 <ul class="roles">
-  <li><a href="service-managers">Service managers</a></li>
-  <li><a href="designers">Designers</a></li>
-  <li><a href="developers">Developers</a></li>
-  <li><a href="researchers">Researchers</a></li>
-  <li><a href="content-designers">Content designers</a></li>
-  <li><a href="analysts">Analysts</a></li>
+  <li><a href="/service-manual/service-managers">Service managers</a></li>
+  <li><a href="/service-manual/designers">Designers</a></li>
+  <li><a href="/service-manual/developers">Developers</a></li>
+  <li><a href="/service-manual/researchers">Researchers</a></li>
+  <li><a href="/service-manual/content-designers">Content designers</a></li>
+  <li><a href="/service-manual/analysts">Analysts</a></li>
 </ul>
 
