--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,7 +1,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>{{ page.title }} - Government Service Design Manual</title>
 
-{% include _head.local.html %}
+{% include _head.assets.html %}
 
 {% if page.css  %}
 <link rel="stylesheet" href="{{ page.css }}" />
