--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,3 +1,14 @@
 <!--start header-->
+<header role="banner" class="group" id="global-header">
+  <div class="header-wrapper group">
+    <a href="/" title="Go to the gov.uk homepage" id="logo"><img src="https://assets.digital.cabinet-office.gov.uk/static/gov.uk_logotype-2x-24145374d271079f08d96c618cc8d4a5.png" alt="GOV.UK"></a>
 
+    <a href="#search" class="button search-toggle">Search</a>
+
+    <form id="search" class="site-search" action="/search" method="get" role="search">
+      <label for="site-search-text" class="visuallyhidden">Search</label>
+      <input type="search" name="q" id="site-search-text" title="Search"><input class="button" type="submit" value="Search">
+    </form>
+  </div>
+</header>
 <!--end header-->
