--- a/_layouts/role-index.html
+++ b/_layouts/role-index.html
@@ -73,5 +73,5 @@ section_class: wide role-index
     {% include _role-links.html %}
   </div>
 
-  <div class="all-guides"><strong><a href="/browse">Browse all guides…</a></strong></div>
+  <div class="all-guides"><strong><a href="/service-manual/browse">Browse all guides…</a></strong></div>
 </div>
