Update role types

--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -3,8 +3,7 @@
   <li><a href="/service-manual/service-managers">Service managers</a></li>
   <li><a href="/service-manual/designers">Designers</a></li>
   <li><a href="/service-manual/developers">Developers</a></li>
-  <li><a href="/service-manual/researchers">Researchers</a></li>
+  <li><a href="/service-manual/user-researchers">User researchers</a></li>
   <li><a href="/service-manual/content-designers">Content designers</a></li>
-  <li><a href="/service-manual/analysts">Analysts</a></li>
+  <li><a href="/service-manual/performance-analysts">Performance analysts</a></li>
 </ul>
-
