Use cached and versioned static assets

--- a/_includes/_analytics.html
+++ b/_includes/_analytics.html
@@ -17,7 +17,7 @@
   GOVUK.Analytics.Format = "homepage";
 </script>
 
-<script src="https://assets.digital.cabinet-office.gov.uk/static/analytics.js" type="text/javascript"></script>
+<script src="https://assets.digital.cabinet-office.gov.uk/static/analytics-8d2f36e4f47ad7e8a049cec4e638455a.js" type="text/javascript"></script>
 
 <script type="text/javascript">
   _gaq.push(['_gat._anonymizeIp']);
