Remove page status
The whole site is beta, so this doesn't add any further meaning

--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -13,7 +13,7 @@
 
     <div id="wrapper" class="{{ page.categories }}{% if page.section_class  %} {{ page.section_class }}{% endif %}">
 
-      <section id="content" role="main" class="group"><div class="pattern-status">{{ page.status }}</div>
+      <section id="content" role="main" class="group">
 
         <div class="js-toggle-nav" id="global-nav">
           <div class="inner">
