--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@ layout: default-wrapper
 section_class: default
 ---
 
+{% include _breadcrumbs.html %}
+
 <article role="article" class="group">
   <header class="page-header group">
     <hgroup>
