--- a/_layouts/detailed-guidance.html
+++ b/_layouts/detailed-guidance.html
@@ -2,6 +2,7 @@
 layout: default-wrapper
 section_class: detailed-guidance
 ---
+{% include _breadcrumbs.html %}
 
 <article role="article" class="group">
   <header class="page-header group">
