--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -4,6 +4,6 @@
   <li><a href="/service-manual/designers">Designers</a></li>
   <li><a href="/service-manual/developers">Developers</a></li>
   <li><a href="/service-manual/user-researchers">User researchers</a></li>
-  <li><a href="/service-manual/content-designers">Content designers</a></li>
+  <li><a href="/service-manual/web-ops">Web operations</a></li>
   <li><a href="/service-manual/performance-analysts">Performance analysts</a></li>
 </ul>
