--- a/service-manual/assets/stylesheets/views/_design-patterns.scss
+++ b/service-manual/assets/stylesheets/views/_design-patterns.scss
@@ -59,7 +59,7 @@ article dd{
 }
 .class-toggle .option:hover{
   cursor: pointer;
-  color: $link-highlight-colour;
+  color: $link-active-colour;
 }
 .class-toggle .selected{
   text-decoration: none;
