--- a/service-manual/assets/stylesheets/views/_home-page.scss
+++ b/service-manual/assets/stylesheets/views/_home-page.scss
@@ -12,28 +12,27 @@
     }    
   }
 
-  .article-container {
-    margin: 0 2em;
-  }
-
-  // Main promo on home page
-  .dbd-promo{
-    font-size: 16px;
+  .dbd-promo {
     border-top: 3px solid $main-colour;
     border-bottom: 3px solid $main-colour;
     overflow: hidden;
-    margin-bottom: 2em;
-    p{
+    
+    margin: 2em;
+    
+    p {
       width: 51%;
       margin: 1em 0 1em 0;
       float: left;
-      font-size: 19px;
+
+      @include core-19;
       line-height: 1.5em;
     }
-    strong{
+    
+    strong {
       display: block;
     }
-    .logo{
+
+    .logo {
       display: block;
       float: right;
       padding: 1.5em 0 1em 1.5em;
@@ -44,34 +43,36 @@
     }
   }
 
-  // Secondary promos
-  .secondary-promos{
-    @include grid(3, 165px);
-    div{
-      background: $panel-colour;
+  .intro {
+    margin: 0 2em 2em 2em;
+    padding: 0 0 2em 0;
+    border-bottom: 3px solid $main-colour;
+
+    h2 {
+      @include bold-36;
     }
-    h3{
-      @include bold-19;
-      background: $main-colour;
-      padding: 0.5em 1em;
-      color: white;
-      margin: 0;
+
+    p {
+      @include core-24;
     }
-    p{
-      margin: 0;   
-    }
-    a{
-      display: block;
-      padding: 1em;
+  }
+
+  .service-life {
+    margin: 0 2em;
+
+    h2 {
+      @include bold-36;
     }
   }
 
   // Phases
-
-  .phases-promo {
+  .phases {
     list-style: none;
     padding: 0;
-    margin: 0;
+
+    h2 {
+      @include bold-36;
+    }
 
     li {
       display: block;
@@ -83,6 +84,9 @@
       &.beta      { background-position: -120px 0;}
       &.live      { background-position: -180px 0;}
 
+      p {
+        width: 75%;
+      }
     }
   }
 
