Don't show "title —" on homepage

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,5 +1,5 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>{{ page.title }} - Government Service Design Manual</title>
+<title>{% if page.title %}{{ page.title }} — {% endif %}Government Service Design Manual</title>
 
 {% include _head.assets.html %}
 
