Category index pages

--- a/_layouts/category-index.html
+++ b/_layouts/category-index.html
@@ -2,15 +2,18 @@
 layout: default-wrapper
 section_class: category-index
 ---
+{% include _breadcrumbs.html %}
 
 <article role="article" class="group">
   <header class="page-header group">
     <hgroup>
-      <h1{% if page.long-title %} class="long-title"{% endif %}>{{ page.title }}</h1>
+      <h1>{{ page.title }}</h1>
       {% if page.subtitle %}
       <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
     </hgroup>
+
+    {% include _meta-phases.html %}
   </header>
 
   <div class="article-container group">
