--- a/service-manual/assets/stylesheets/styleguide/_colours.scss
+++ b/service-manual/assets/stylesheets/styleguide/_colours.scss
@@ -6,7 +6,7 @@ $gsdm-nav-main: $mellow-red;
 $gsdm-nav-secondary: $black;
 
 $alpha-colour: $pink;
-$discovery-colour: $pink-25;
+$discovery-colour: $fuschia;
 $inception-colour: $pink-50;
 $beta-colour: $orange;
 $live-colour: $grass-green;
